// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the secondary tag component 1`] = `
<div>
  <span
    class="sc-AxjAm fcdCyW"
  >
    Text
  </span>
</div>
`;

exports[`should render the tag component 1`] = `
<div>
  <span
    class="sc-AxjAm yySCJ"
  >
    Text
  </span>
</div>
`;
